--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Vui - A ui framework build with vue</title>
+    <title>Vui - 一套基于vue以学习vue为目的编写的UI框架</title>
 </head>
 
 <body>
