修复icon样式权重，datepicker添加图标

--- a/src/assets/iconfont/demo_fontclass.html
+++ b/src/assets/iconfont/demo_fontclass.html
@@ -13,6 +13,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon vui-icon-font vui-icon-date-picker"></i>
+                    <div class="name">rili</div>
+                    <div class="fontclass">.vui-icon-date-picker</div>
+                </li>
+            
+                <li>
                 <i class="icon vui-icon-font vui-icon-radio-circular"></i>
                     <div class="name">单选-fill</div>
                     <div class="fontclass">.vui-icon-radio-circular</div>
