--- a/src/assets/iconfont/demo_symbol.html
+++ b/src/assets/iconfont/demo_symbol.html
@@ -29,6 +29,14 @@
             
                 <li>
                     <svg class="icon" aria-hidden="true">
+                        <use xlink:href="#vui-icon-date-picker"></use>
+                    </svg>
+                    <div class="name">rili</div>
+                    <div class="fontclass">#vui-icon-date-picker</div>
+                </li>
+            
+                <li>
+                    <svg class="icon" aria-hidden="true">
                         <use xlink:href="#vui-icon-radio-circular"></use>
                     </svg>
                     <div class="name">单选-fill</div>
