--- a/src/assets/iconfont/demo_unicode.html
+++ b/src/assets/iconfont/demo_unicode.html
@@ -33,6 +33,12 @@
         <ul class="icon_lists clear">
             
                 <li>
+                <i class="icon vui-icon-font">&#xe600;</i>
+                    <div class="name">rili</div>
+                    <div class="code">&amp;#xe600;</div>
+                </li>
+            
+                <li>
                 <i class="icon vui-icon-font">&#xe71e;</i>
                     <div class="name">单选-fill</div>
                     <div class="code">&amp;#xe71e;</div>
